[package]
name = "test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-agent = "0.36.0"
candid = "0.10.9"
tokio = { version = "1.38.0", features = ["full"] }
ic-cdk = "0.15.0"
serde = "1.0.203"
serde_bytes = "0.11.15"
hex = "0.4.3"
lazy_static = "1.5.0"
dotenv = "0.15.0"
types = {path = "../libraries/types"}