[package]
name = "root_bucket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.16.0"
serde = "1.0.209"
types = { path = "../../libraries/types" }
ic-stable-structures = "0.6.5"