[package]
name = "feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.8"
ic-cdk = "0.14.0"
serde = "1.0.203"
ic-stable-structures = "0.6.5"
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic" }
ic-ledger-hash-of = { git = "https://github.com/dfinity/ic" }
ic-ledger-types = "0.11.0"
types = { path = "../../libraries/types" }