[package]
name = "feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.9"
ic-cdk = "0.15.0"
serde = "1.0.204"
ic-stable-structures = "0.6.5"
ic-cdk-timers = "0.9.0"
types = { path = "../../libraries/types" }