[package]
name = "like_fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.8"
ic-cdk = "0.14.0"
serde = "1.0.202"
types = { path = "../../libraries/types" }
ic-cdk-timers = "0.8.0"